--- a/pulse/package.json
+++ b/pulse/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-bootstrap": "^0.24.4",
