--- a/pulse/package.json
+++ b/pulse/package.json
@@ -2,10 +2,13 @@
   "name": "pulse",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://sheelpatel.github.io/pulseox",
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
+    "chartjs-plugin-zoom": "^0.6.6",
+    "hammerjs": "^2.0.8",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-chartjs-2": "^2.7.4",
@@ -22,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
